--- a/index.html
+++ b/index.html
@@ -120,10 +120,10 @@
 
       els.breakdown.innerHTML = '';
       els.breakdown.append(
-        line(`${c} containers × ${fmt.format(p)} =`, fmt.format(weekly)`/week`),
-        line(`${fmt.format(weekly)} × 4 weeks =`, fmt.format(monthly)),
-        line(`${fmt.format(monthly)} × 12 months =`, fmt.format(yearly)),
-        line(`${fmt.format(yearly)} × 5 years =`, fmt.format(fiveYear)),
+        line(`${c} containers × ${fmt.format(p)} =`, fmt.format(weekly)+ ' /week'),
+        line(`${fmt.format(weekly)} × 4 weeks =`, fmt.format(monthly)+ ' /month'),
+        line(`${fmt.format(monthly)} × 12 months =`, fmt.format(yearly)+ ' /year'),
+        line(`${fmt.format(yearly)} × 5 years =`, fmt.format(fiveYear)+ ' /5 years'),
       );
       els.lifetime.textContent = `${fmt.format(lifetime)}!!`;
 
