--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         line(`${c} containers × ${fmt.format(p)} =`, fmt.format(weekly) + ' /week'),
         line(`${fmt.format(weekly)} × 4 weeks =`, fmt.format(monthly) + ' /month'),
         line(`${fmt.format(monthly)} × 12 months =`, fmt.format(yearly) + ' /year'),
-        line(`${fmt.format(yearly)} × 5 years =`, fmt.format(fiveYear) + ' /5 years'),
+        line(`${fmt.format(yearly)} × 5 years =`, fmt.format(fiveYear)),
       );
       els.lifetime.textContent = `${fmt.format(lifetime)}!!`;
 
