--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
     .row:last-child{border-bottom:none}
     .sig{font-weight:700}
     .big{font-family:Montserrat, Inter, sans-serif; font-weight:800; font-size:clamp(24px,8vw,42px); letter-spacing:.5px}
-    subhead{background:#0f3f8d; color:#fff; padding:16px; font-weight:900; font-size:clamp(20px,6vw,28px); font-family:Montserrat, Inter, sans-serif; text-align:center}
+    .subhead{background:#0f3f8d; color:#fff; padding:16px; font-weight:900; font-size:clamp(20px,6vw,28px); font-family:Montserrat, Inter, sans-serif; text-align:center}
     .jugs{display:grid; grid-template-columns:repeat(6,1fr); gap:8px; padding:10px 14px 18px; background:#e8f0ff}
     .jug{width:100%; aspect-ratio:1/1;}
     .controls{margin:10px 0 16px; background:white; border-radius:14px; box-shadow:0 6px 18px rgba(24,86,179,.10); padding:12px}
